--- a/hims-backend/src/main/resources/application.properties
+++ b/hims-backend/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=zxx000728.
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring,datasource.createDatabase=CREATE DATABASE IF NOT EXISTS HIMS;
+spring,datasource.useDatabase=USE HIMS;
+spring.datasource.createUser=CREATE TABLE IF NOT EXISTS user\
+  (`username` int,\
+  `password` int,\
+  primary key (`username`))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+server.port=8080
