insert user data; add user service; add exception handler

--- a/hims-backend/src/main/resources/application.properties
+++ b/hims-backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
+spring.datasource.initial_url=jdbc:mysql://127.0.0.1:3306/?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hims?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=zxx000728.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -13,6 +14,34 @@ spring.datasource.createUser=CREATE TABLE IF NOT EXISTS user\
   `phone` varchar(20),\
   `u_type` varchar(20),\
   primary key (`id`))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+spring.datasource.insertUser=INSERT IGNORE INTO user (id,name,password,age,email,phone,u_type) VALUES \
+  (1,'doctor1','123456','30','doctor1@163.com','18912345678','doctor'),\
+  (2,'doctor2','123456','32','doctor2@163.com','18922345678','doctor'),\
+  (3,'doctor3','123456','33','doctor3@163.com','18932345678','doctor'),\
+  (4,'doctor4','123456','34','doctor4@163.com','18942345678','doctor'),\
+  (5,'doctor5','123456','35','doctor5@163.com','18952345678','doctor'),\
+  (6,'doctor6','123456','36','doctor6@163.com','18962345678','doctor'),\
+  (7,'hnurse1','123456','27','hnurse1@163.com','18312345678','h_nurse'),\
+  (8,'hnurse2','123456','30','hnurse2@163.com','18322345678','h_nurse'),\
+  (9,'hnurse3','123456','32','hnurse3@163.com','18332345678','h_nurse'),\
+  (10,'hnurse4','123456','33','hnurse4@163.com','18342345678','h_nurse'),\
+  (11,'hnurse5','123456','34','hnurse5@163.com','18352345678','h_nurse'),\
+  (12,'hnurse6','123456','35','hnurse6@163.com','18362345678','h_nurse'),\
+  (13,'wnurse1','123456','35','wnurse1@163.com','18212345678','w_nurse'),\
+  (14,'wnurse2','123456','35','wnurse2@163.com','18222345678','w_nurse'),\
+  (15,'wnurse3','123456','35','wnurse3@163.com','18232345678','w_nurse'),\
+  (16,'wnurse4','123456','35','wnurse4@163.com','18242345678','w_nurse'),\
+  (17,'wnurse5','123456','35','wnurse5@163.com','18252345678','w_nurse'),\
+  (18,'wnurse6','123456','35','wnurse6@163.com','18262345678','w_nurse'),\
+  (19,'wnurse7','123456','35','wnurse7@163.com','18272345678','w_nurse'),\
+  (20,'wnurse8','123456','35','wnurse8@163.com','18282345678','w_nurse'),\
+  (21,'wnurse9','123456','35','wnurse9@163.com','18292345678','w_nurse'),\
+  (22,'enurse1','123456','35','enurse1@163.com','18112345678','e_nurse'),\
+  (23,'enurse2','123456','35','enurse2@163.com','18122345678','e_nurse'),\
+  (24,'enurse3','123456','35','enurse3@163.com','18132345678','e_nurse'),\
+  (25,'enurse4','123456','35','enurse4@163.com','18142345678','e_nurse'),\
+  (26,'enurse5','123456','35','enurse5@163.com','18152345678','e_nurse'),\
+  (27,'enurse6','123456','35','enurse6@163.com','18162345678','e_nurse');
 spring.datasource.createPatient=CREATE TABLE IF NOT EXISTS patient\
   (`id` int(20) NOT NULL AUTO_INCREMENT,\
   `name` varchar(20),\
