--- a/hims-backend/src/main/resources/application.properties
+++ b/hims-backend/src/main/resources/application.properties
@@ -6,14 +6,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring,datasource.createDatabase=CREATE DATABASE IF NOT EXISTS HIMS;
 spring,datasource.useDatabase=USE HIMS;
 spring.datasource.createUser=CREATE TABLE IF NOT EXISTS user\
-  (`id` int(20) NOT NULL AUTO_INCREMENT,\
-  `name` varchar(20),\
-  `password` varchar(50),\
-  `age` varchar(20),\
-  `email` varchar(50),\
-  `phone` varchar(20),\
-  `u_type` varchar(20),\
-  primary key (`id`))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+  (id int NOT NULL AUTO_INCREMENT,\
+   name varchar(20),\
+   password varchar(50),\
+   age varchar(20),\
+   email varchar(50),\
+   phone varchar(20),\
+   u_type varchar(20),\
+   primary key (id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
 spring.datasource.insertUser=INSERT IGNORE INTO user (id,name,password,age,email,phone,u_type) VALUES \
   (1,'doctor1','123456','30','doctor1@163.com','18912345678','doctor'),\
   (2,'doctor2','123456','32','doctor2@163.com','18922345678','doctor'),\
@@ -43,50 +43,63 @@ spring.datasource.insertUser=INSERT IGNORE INTO user (id,name,password,age,email
   (26,'enurse5','123456','35','enurse5@163.com','18152345678','e_nurse'),\
   (27,'enurse6','123456','35','enurse6@163.com','18162345678','e_nurse');
 spring.datasource.createPatient=CREATE TABLE IF NOT EXISTS patient\
-  (`id` int(20) NOT NULL AUTO_INCREMENT,\
-  `name` varchar(20),\
-  `age` varchar(20),\
-  `phone` varchar(20),\
-  `address` varchar(50),\
-  `rating` varchar(20),\
-  `e_nurse_id` int(20),\
-  `w_nurse_id` int(20),\
-  `bed_id` int(20),\
-  primary key (`id`))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+  (id int NOT NULL AUTO_INCREMENT,\
+   name varchar(20),\
+   age varchar(20),\
+   phone varchar(20),\
+   address varchar(50),\
+   rating varchar(20),\
+   e_nurse_id int,\
+   w_nurse_id int,\
+   bed_id int,\
+   primary key (id),\
+   foreign key (e_nurse_id) references user(id),\
+   foreign key (w_nurse_id) references user(id),\
+   foreign key (bed_id) references bed(id)) ENGINE=InnoDB DEFAULT CHARSET=utf8;
 spring.datasource.createDaily_report=CREATE TABLE IF NOT EXISTS daily_report\
-  (`id` int(20) NOT NULL AUTO_INCREMENT,\
-  `p_id` int(20),\
-  `temperature` varchar(20),\
-  `symptom` varchar(50),\
-  `state` varchar(20),\
-  `w_nurse_id` int(20),\
-  `n_report_id` int(20),\
-  primary key (`id`))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+  (id int NOT NULL AUTO_INCREMENT,\
+   p_id int,\
+   temperature varchar(20),\
+   symptom varchar(50),\
+   state varchar(20),\
+   w_nurse_id int,\
+   n_report_id int,\
+   primary key (id),\
+   foreign key (p_id) references patient(id),\
+   foreign key (w_nurse_id) references user(id),\
+   foreign key (n_report_id) references nat_report(id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
 spring.datasource.createNAT_report=CREATE TABLE IF NOT EXISTS nat_report\
-  (`id` int(20) NOT NULL AUTO_INCREMENT,\
-  `p_id` int(20),\
-  `result` varchar(20),\
-  `date` varchar(20),\
-  `rating` varchar(20),\
-  primary key (`id`))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+  (id int NOT NULL AUTO_INCREMENT,\
+   p_id int,\
+   result varchar(20),\
+   date varchar(20),\
+   rating varchar(20),\
+   primary key (id),\
+   foreign key (p_id) references patient(id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
 spring.datasource.createTreatment_area=CREATE TABLE IF NOT EXISTS treatment_area\
-  (`id` int(20) NOT NULL AUTO_INCREMENT,\
-  `type` varchar(20),\
-  `doctor_id` int(20),\
-  `h_nurse_id` int(20),\
-  primary key (`id`))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+  (id int NOT NULL AUTO_INCREMENT,\
+   type varchar(20),\
+   doctor_id int,\
+   h_nurse_id int,\
+   primary key (id),\
+   foreign key (doctor_id) references user(id),\
+   foreign key (h_nurse_id) references user(id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
 spring.datasource.createWard=CREATE TABLE IF NOT EXISTS ward\
-  (`id` int(20) NOT NULL AUTO_INCREMENT,\
-  `t_area_id` int(20),\
-  primary key (`id`))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+  (id int NOT NULL AUTO_INCREMENT,\
+   t_area_id int,\
+   primary key (id),\
+   foreign key (t_area_id) references treatment_area(id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
 spring.datasource.createWard_nurse_ward=CREATE TABLE IF NOT EXISTS ward_nurse_ward\
-  (`w_nurse_id` int(20) NOT NULL,\
-  `w_id` int(20),\
-  primary key (`w_nurse_id`))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+  (w_nurse_id int NOT NULL,\
+   w_id int,\
+   primary key (w_nurse_id),\
+   foreign key (w_nurse_id) references user(id),\
+   foreign key (w_id) references ward(id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
 spring.datasource.createBed=CREATE TABLE IF NOT EXISTS bed\
-  (`id` int(20) NOT NULL AUTO_INCREMENT,\
-  `w_id` int(20),\
-  `state` varchar(20),\
-  primary key (`id`))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+  (id int NOT NULL AUTO_INCREMENT,\
+   w_id int,\
+   state varchar(20),\
+   primary key (id),\
+   foreign key (w_id) references ward(id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
 
 server.port=8080
