initialize treatment area

--- a/hims-backend/src/main/resources/application.properties
+++ b/hims-backend/src/main/resources/application.properties
@@ -84,11 +84,19 @@ spring.datasource.createTreatment_area=CREATE TABLE IF NOT EXISTS treatment_area
    primary key (id),\
    foreign key (doctor_id) references user(id),\
    foreign key (h_nurse_id) references user(id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+spring.datasource.insertTreatment_area=INSERT IGNORE INTO treatment_area (id,type,doctor_id,h_nurse_id) VALUES\
+  (1,'mild',1,7),\
+  (2,'severe',2,8),\
+  (3,'critical',3,9);
 spring.datasource.createWard=CREATE TABLE IF NOT EXISTS ward\
   (id int NOT NULL AUTO_INCREMENT,\
    t_area_id int,\
    primary key (id),\
    foreign key (t_area_id) references treatment_area(id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+spring.datasource.insertWard=INSERT IGNORE INTO ward (id,t_area_id) VALUES\
+  (1,1),(2,1),(3,1),(4,1),(5,1),\
+  (6,2),(7,2),(8,2),(9,2),(10,2),\
+  (11,3),(12,3),(13,3),(14,3),(15,3);
 spring.datasource.createWard_nurse_ward=CREATE TABLE IF NOT EXISTS ward_nurse_ward\
   (w_nurse_id int NOT NULL,\
    w_id int,\
@@ -101,5 +109,16 @@ spring.datasource.createBed=CREATE TABLE IF NOT EXISTS bed\
    state varchar(20),\
    primary key (id),\
    foreign key (w_id) references ward(id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
-
+spring.datasource.insertBed=INSERT IGNORE INTO bed (w_id,state) VALUES\
+  (1,'free'),(1,'free'),(1,'free'),(1,'free'),\
+  (2,'free'),(2,'free'),(2,'free'),(2,'free'),\
+  (3,'free'),(3,'free'),(3,'free'),(3,'free'),\
+  (4,'free'),(4,'free'),(4,'free'),(4,'free'),\
+  (5,'free'),(5,'free'),(5,'free'),(5,'free'),\
+  (6,'free'),(6,'free'),\
+  (7,'free'),(7,'free'),\
+  (8,'free'),(8,'free'),\
+  (9,'free'),(9,'free'),\
+  (10,'free'),(10,'free'),\
+  (11,'free'),(12,'free'),(13,'free'),(14,'free'),(15,'free');
 server.port=8080
