--- a/hims-backend/src/main/resources/application.properties
+++ b/hims-backend/src/main/resources/application.properties
@@ -13,7 +13,9 @@ spring.datasource.createUser=CREATE TABLE IF NOT EXISTS user\
    email varchar(50),\
    phone varchar(20),\
    u_type varchar(20),\
-   primary key (id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+   primary key (id),\
+   unique index (id),\
+   index (u_type))ENGINE=InnoDB DEFAULT CHARSET=utf8;
 spring.datasource.insertUser=INSERT IGNORE INTO user (id,name,password,age,email,phone,u_type) VALUES \
   (1,'doctor1','123456','30','doctor1@163.com','18912345678','doctor'),\
   (2,'doctor2','123456','32','doctor2@163.com','18922345678','doctor'),\
@@ -55,7 +57,11 @@ spring.datasource.createPatient=CREATE TABLE IF NOT EXISTS patient\
    primary key (id),\
    foreign key (e_nurse_id) references user(id),\
    foreign key (w_nurse_id) references user(id),\
-   foreign key (bed_id) references bed(id)) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+   foreign key (bed_id) references bed(id),\
+   unique index (id),\
+   index (e_nurse_id),\
+   index (w_nurse_id),\
+   index (bed_id)) ENGINE=InnoDB DEFAULT CHARSET=utf8;
 spring.datasource.createDaily_report=CREATE TABLE IF NOT EXISTS daily_report\
   (id int NOT NULL AUTO_INCREMENT,\
    p_id int,\
@@ -67,7 +73,10 @@ spring.datasource.createDaily_report=CREATE TABLE IF NOT EXISTS daily_report\
    primary key (id),\
    foreign key (p_id) references patient(id),\
    foreign key (w_nurse_id) references user(id),\
-   foreign key (n_report_id) references nat_report(id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+   foreign key (n_report_id) references nat_report(id),\
+   index (p_id),\
+   index (w_nurse_id),\
+   index (n_report_id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
 spring.datasource.createNAT_report=CREATE TABLE IF NOT EXISTS nat_report\
   (id int NOT NULL AUTO_INCREMENT,\
    p_id int,\
@@ -75,7 +84,8 @@ spring.datasource.createNAT_report=CREATE TABLE IF NOT EXISTS nat_report\
    date varchar(20),\
    rating varchar(20),\
    primary key (id),\
-   foreign key (p_id) references patient(id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+   foreign key (p_id) references patient(id),\
+   index (p_id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
 spring.datasource.createTreatment_area=CREATE TABLE IF NOT EXISTS treatment_area\
   (id int NOT NULL AUTO_INCREMENT,\
    type varchar(20),\
@@ -92,7 +102,8 @@ spring.datasource.createWard=CREATE TABLE IF NOT EXISTS ward\
   (id int NOT NULL AUTO_INCREMENT,\
    t_area_id int,\
    primary key (id),\
-   foreign key (t_area_id) references treatment_area(id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+   foreign key (t_area_id) references treatment_area(id),\
+   index (t_area_id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
 spring.datasource.insertWard=INSERT IGNORE INTO ward (id,t_area_id) VALUES\
   (1,1),(2,1),(3,1),(4,1),(5,1),\
   (6,2),(7,2),(8,2),(9,2),(10,2),\
@@ -102,13 +113,17 @@ spring.datasource.createWard_nurse_ward=CREATE TABLE IF NOT EXISTS ward_nurse_wa
    w_id int,\
    primary key (w_nurse_id),\
    foreign key (w_nurse_id) references user(id),\
-   foreign key (w_id) references ward(id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+   foreign key (w_id) references ward(id),\
+   index (w_nurse_id),\
+   index (w_id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
 spring.datasource.createBed=CREATE TABLE IF NOT EXISTS bed\
   (id int NOT NULL AUTO_INCREMENT,\
    w_id int,\
    state varchar(20),\
    primary key (id),\
-   foreign key (w_id) references ward(id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+   foreign key (w_id) references ward(id),\
+   index (w_id),\
+   index (state))ENGINE=InnoDB DEFAULT CHARSET=utf8;
 spring.datasource.insertBed=INSERT IGNORE INTO bed (w_id,state) VALUES\
   (1,'free'),(1,'free'),(1,'free'),(1,'free'),\
   (2,'free'),(2,'free'),(2,'free'),(2,'free'),\
