--- a/hims-backend/src/main/resources/application.properties
+++ b/hims-backend/src/main/resources/application.properties
@@ -54,6 +54,7 @@ spring.datasource.createPatient=CREATE TABLE IF NOT EXISTS patient\
    e_nurse_id int,\
    w_nurse_id int,\
    bed_id int,\
+   state varchar(20),\
    primary key (id),\
    foreign key (e_nurse_id) references user(id),\
    foreign key (w_nurse_id) references user(id),\
@@ -61,7 +62,8 @@ spring.datasource.createPatient=CREATE TABLE IF NOT EXISTS patient\
    unique index (id),\
    index (e_nurse_id),\
    index (w_nurse_id),\
-   index (bed_id)) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+   index (bed_id),\
+   index (state)) ENGINE=InnoDB DEFAULT CHARSET=utf8;
 spring.datasource.createDaily_report=CREATE TABLE IF NOT EXISTS daily_report\
   (id int NOT NULL AUTO_INCREMENT,\
    p_id int,\
