--- a/hims-backend/src/main/resources/application.properties
+++ b/hims-backend/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hims?useUnicode=true&character
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring,datasource.createDatabase=CREATE DATABASE IF NOT EXISTS HIMS;
-spring,datasource.useDatabase=USE HIMS;
+spring.datasource.createDatabase=CREATE DATABASE IF NOT EXISTS HIMS;
+spring.datasource.useDatabase=USE HIMS;
 spring.datasource.createUser=CREATE TABLE IF NOT EXISTS user\
   (id int NOT NULL AUTO_INCREMENT,\
    name varchar(20),\
