--- a/hims-backend/src/main/resources/application.properties
+++ b/hims-backend/src/main/resources/application.properties
@@ -43,7 +43,30 @@ spring.datasource.insertUser=INSERT IGNORE INTO user (id,name,password,age,email
   (24,'enurse3','123456','35','enurse3@163.com','18132345678','e_nurse'),\
   (25,'enurse4','123456','35','enurse4@163.com','18142345678','e_nurse'),\
   (26,'enurse5','123456','35','enurse5@163.com','18152345678','e_nurse'),\
-  (27,'enurse6','123456','35','enurse6@163.com','18162345678','e_nurse');
+  (27,'enurse6','123456','35','enurse6@163.com','18162345678','e_nurse'),\
+  (28,'wnurse10','123456','35','wnurse10@163.com','18292345611','w_nurse'),\
+  (29,'wnurse11','123456','35','wnurse11@163.com','18292345612','w_nurse'),\
+  (30,'wnurse12','123456','35','wnurse12@163.com','18292345613','w_nurse'),\
+  (31,'wnurse13','123456','35','wnurse13@163.com','18292345614','w_nurse'),\
+  (32,'wnurse14','123456','35','wnurse14@163.com','18292345615','w_nurse'),\
+  (33,'Lu Yan','123456','35','wnurse15@163.com','18292345616','w_nurse'),\
+  (34,'Wu S','123456','35','wnurse16@163.com','18292345617','w_nurse'),\
+  (35,'Ci W','123456','35','wnurse17@163.com','18292345618','w_nurse'),\
+  (36,'Wang J','123456','35','wnurse18@163.com','18292445618','w_nurse'),\
+  (37,'Xiu H','123456','35','wnurse19@163.com','18292545618','w_nurse'),\
+  (38,'Dai Y','123456','35','wnurse20@163.com','18292645618','w_nurse'),\
+  (39,'Fang Z','123456','35','wnurse21@163.com','18292745618','w_nurse'),\
+  (40,'Zhou D','123456','35','wnurse22@163.com','18292845618','w_nurse'),\
+  (41,'Tina C','123456','35','wnurse23@163.com','18294345618','w_nurse'),\
+  (42,'Hu Y','123456','35','wnurse24@163.com','18292445618','w_nurse'),\
+  (43,'Yu Q','123456','35','wnurse25@163.com','18252345618','w_nurse'),\
+  (44,'Di M','123456','35','wnurse26@163.com','18292347618','w_nurse'),\
+  (45,'Li Y','123456','35','wnurse27@163.com','18292348618','w_nurse'),\
+  (46,'Tina M','123456','35','wnurse28@163.com','18292349618','w_nurse'),\
+  (47,'Wu L','123456','35','wnurse29@163.com','18292343618','w_nurse'),\
+  (48,'Gong Y','123456','35','wnurse30@163.com','18292335618','w_nurse'),\
+  (49,'Zhou Z','123456','35','wnurse31@163.com','18292745618','w_nurse'),\
+  (50,'Mao M','123456','35','wnurse32@163.com','18292285618','w_nurse');
 spring.datasource.createPatient=CREATE TABLE IF NOT EXISTS patient\
   (id int NOT NULL AUTO_INCREMENT,\
    name varchar(20),\
@@ -118,6 +141,8 @@ spring.datasource.createWard_nurse_ward=CREATE TABLE IF NOT EXISTS ward_nurse_wa
    foreign key (w_id) references ward(id),\
    index (w_nurse_id),\
    index (w_id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+spring.datasource.insertWard_nurse_ward=INSERT IGNORE INTO ward_nurse_ward (w_nurse_id,w_id) VALUES\
+  (13,1),(14,1),(15,2),(16,3),(17,4),(18,6),(19,7),(20,8),(21,11),(28,12),(49,13);
 spring.datasource.createBed=CREATE TABLE IF NOT EXISTS bed\
   (id int NOT NULL AUTO_INCREMENT,\
    w_id int,\
