--- a/hims-frontend/package.json
+++ b/hims-frontend/package.json
@@ -18,7 +18,8 @@
     "element-ui": "^2.14.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.6.0"
+    "vuex": "^3.6.0",
+    "vuex-persistedstate": "^4.0.0-beta.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
