--- a/hims-backend/src/main/resources/application.properties
+++ b/hims-backend/src/main/resources/application.properties
@@ -78,8 +78,8 @@ spring.datasource.createPatient=CREATE TABLE IF NOT EXISTS patient\
    w_nurse_id int,\
    bed_id int,\
    state varchar(20),\
-   toRelease boolean,\
-   toTransfer boolean,\
+   is_to_be_released boolean,\
+   is_to_be_transferred boolean,\
    primary key (id),\
    foreign key (e_nurse_id) references user(id),\
    foreign key (w_nurse_id) references user(id),\
