add patient data

--- a/hims-backend/src/main/resources/application.properties
+++ b/hims-backend/src/main/resources/application.properties
@@ -89,6 +89,9 @@ spring.datasource.createPatient=CREATE TABLE IF NOT EXISTS patient\
    index (w_nurse_id),\
    index (bed_id),\
    index (state)) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+spring.datasource.insertPatient=INSERT IGNORE INTO patient (id,name,age,phone,address,rating,e_nurse_id,w_nurse_id,bed_id,state,is_to_be_released,is_to_be_transferred) VALUES\
+  (1,'bb','30','12345678901','fudan','mild',22,13,1,'hospitalized',0,0),\
+  (2,'cc','30','12345678902','fudan','mild',23,13,2,'hospitalized',0,0);
 spring.datasource.createDaily_report=CREATE TABLE IF NOT EXISTS daily_report\
   (id int NOT NULL AUTO_INCREMENT,\
    p_id int,\
@@ -154,7 +157,7 @@ spring.datasource.createBed=CREATE TABLE IF NOT EXISTS bed\
    index (w_id),\
    index (state))ENGINE=InnoDB DEFAULT CHARSET=utf8;
 spring.datasource.insertBed=INSERT IGNORE INTO bed (w_id,state) VALUES\
-  (1,'free'),(1,'free'),(1,'free'),(1,'free'),\
+  (1,'occupied'),(1,'occupied'),(1,'free'),(1,'free'),\
   (2,'free'),(2,'free'),(2,'free'),(2,'free'),\
   (3,'free'),(3,'free'),(3,'free'),(3,'free'),\
   (4,'free'),(4,'free'),(4,'free'),(4,'free'),\
