modify bed data

--- a/hims-backend/src/main/resources/application.properties
+++ b/hims-backend/src/main/resources/application.properties
@@ -156,16 +156,16 @@ spring.datasource.createBed=CREATE TABLE IF NOT EXISTS bed\
    foreign key (w_id) references ward(id),\
    index (w_id),\
    index (state))ENGINE=InnoDB DEFAULT CHARSET=utf8;
-spring.datasource.insertBed=INSERT IGNORE INTO bed (w_id,state) VALUES\
-  (1,'occupied'),(1,'occupied'),(1,'free'),(1,'free'),\
-  (2,'free'),(2,'free'),(2,'free'),(2,'free'),\
-  (3,'free'),(3,'free'),(3,'free'),(3,'free'),\
-  (4,'free'),(4,'free'),(4,'free'),(4,'free'),\
-  (5,'free'),(5,'free'),(5,'free'),(5,'free'),\
-  (6,'free'),(6,'free'),\
-  (7,'free'),(7,'free'),\
-  (8,'free'),(8,'free'),\
-  (9,'free'),(9,'free'),\
-  (10,'free'),(10,'free'),\
-  (11,'free'),(12,'free'),(13,'free'),(14,'free'),(15,'free');
+spring.datasource.insertBed=INSERT IGNORE INTO bed (id,w_id,state) VALUES\
+  (1,1,'occupied'),(2,1,'occupied'),(3,1,'free'),(4,1,'free'),\
+  (5,2,'free'),(6,2,'free'),(7,2,'free'),(8,2,'free'),\
+  (9,3,'free'),(10,3,'free'),(11,3,'free'),(12,3,'free'),\
+  (13,4,'free'),(14,4,'free'),(15,4,'free'),(16,4,'free'),\
+  (17,5,'free'),(18,5,'free'),(19,5,'free'),(20,5,'free'),\
+  (21,6,'free'),(22,6,'free'),\
+  (23,7,'free'),(24,7,'free'),\
+  (25,8,'free'),(26,8,'free'),\
+  (27,9,'free'),(28,9,'free'),\
+  (29,10,'free'),(30,10,'free'),\
+  (31,11,'free'),(32,12,'free'),(33,13,'free'),(34,14,'free'),(35,15,'free');
 server.port=8080
