add report domain

--- a/hims-backend/src/main/resources/application.properties
+++ b/hims-backend/src/main/resources/application.properties
@@ -95,6 +95,7 @@ spring.datasource.insertPatient=INSERT IGNORE INTO patient (id,name,age,phone,ad
 spring.datasource.createDaily_report=CREATE TABLE IF NOT EXISTS daily_report\
   (id int NOT NULL AUTO_INCREMENT,\
    p_id int,\
+   date DATE,\
    temperature varchar(20),\
    symptom varchar(50),\
    state varchar(20),\
@@ -106,16 +107,20 @@ spring.datasource.createDaily_report=CREATE TABLE IF NOT EXISTS daily_report\
    foreign key (n_report_id) references nat_report(id),\
    index (p_id),\
    index (w_nurse_id),\
-   index (n_report_id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+   index (n_report_id),\
+   index (date))ENGINE=InnoDB DEFAULT CHARSET=utf8;
 spring.datasource.createNAT_report=CREATE TABLE IF NOT EXISTS nat_report\
   (id int NOT NULL AUTO_INCREMENT,\
    p_id int,\
    result varchar(20),\
-   date varchar(20),\
+   date DATE,\
+   time TIME,\
    rating varchar(20),\
    primary key (id),\
    foreign key (p_id) references patient(id),\
-   index (p_id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+   index (p_id),\
+   index (date),\
+   index (time))ENGINE=InnoDB DEFAULT CHARSET=utf8;
 spring.datasource.createTreatment_area=CREATE TABLE IF NOT EXISTS treatment_area\
   (id int NOT NULL AUTO_INCREMENT,\
    type varchar(20),\
