add transfer patient trigger; modify addPatient request

--- a/hims-backend/src/main/resources/application.properties
+++ b/hims-backend/src/main/resources/application.properties
@@ -67,6 +67,24 @@ spring.datasource.insertUser=INSERT IGNORE INTO user (id,name,password,age,email
   (48,'Gong Y','123456','35','wnurse30@163.com','18292335618','w_nurse'),\
   (49,'Zhou Z','123456','35','wnurse31@163.com','18292745618','w_nurse'),\
   (50,'Mao M','123456','35','wnurse32@163.com','18292285618','w_nurse');
+spring.datasource.dropTrigger_on_patient=DROP TRIGGER IF EXISTS transfer_patient;
+#spring.datasource.createTrigger_on_patient=CREATE TRIGGER transfer_patient AFTER UPDATE ON patient FOR EACH ROW \
+#  if new.state = "discharge" or new.state = "dead" then \
+#  BEGIN \
+#  declare p_id int; \
+#  update bed set state = "free" where id = new.bed_id; \
+#  select IFNULL(min(id),-1) into p_id from patient where rating = new.rating and is_to_be_transferred = 1 and bed_id is null; \
+#  if p_id != -1 then \
+#  update patient set w_nurse_id = new.w_nurse_id,bed_id = new.bed_id,state = "hospitalized",is_to_be_transferred = 0 where id = p_id; \
+#  update bed set state = "occupied" where id = new.bed_id; \
+#  else \
+#  select IFNULL(min(id),-1) into p_id from patient where rating = new.rating and is_to_be_transferred = 1 and bed_id is not null; \
+#  if p_id != -1 then \
+#  update patient set w_nurse_id = new.w_nurse_id,bed_id = new.bed_id,is_to_be_transferred = 0 where id = p_id; \
+#  update bed set state = "occupied" where id = new.bed_id; \
+#  END if; \
+#  END;
+#spring.datasource.createTrigger_on_patient=CREATE TRIGGER transfer_patient AFTER UPDATE ON patient FOR EACH ROW if new.state = "discharge" or new.state = "dead" then BEGIN declare p_id int; update bed set state = "free" where id = new.bed_id; select IFNULL(min(id),-1) into p_id from patient where rating = new.rating and is_to_be_transferred = 1 and bed_id is null; if p_id != -1 then update patient set w_nurse_id = new.w_nurse_id,bed_id = new.bed_id,state = "hospitalized",is_to_be_transferred = 0 where id = p_id; update bed set state = "occupied" where id = new.bed_id; else select IFNULL(min(id),-1) into p_id from patient where rating = new.rating and is_to_be_transferred = 1 and bed_id is not null; if p_id != -1 then update patient set w_nurse_id = new.w_nurse_id,bed_id = new.bed_id,is_to_be_transferred = 0 where id = p_id; update bed set state = "occupied" where id = new.bed_id; END if; END;
 spring.datasource.createPatient=CREATE TABLE IF NOT EXISTS patient\
   (id int NOT NULL AUTO_INCREMENT,\
    name varchar(20),\
