--- a/hims-backend/src/main/resources/application.properties
+++ b/hims-backend/src/main/resources/application.properties
@@ -68,6 +68,7 @@ spring.datasource.insertUser=INSERT IGNORE INTO user (id,name,password,age,email
   (49,'Zhou Z','123456','35','wnurse31@163.com','18292745618','w_nurse'),\
   (50,'Mao M','123456','35','wnurse32@163.com','18292285618','w_nurse');
 spring.datasource.dropTrigger_on_patient=DROP TRIGGER IF EXISTS transfer_patient;
+spring.datasource.drop_transfer_patient_after_add_new_wnurse=DROP TRIGGER IF EXISTS transfer_patient_after_add_new_wnurse;
 #spring.datasource.createTrigger_on_patient=CREATE TRIGGER transfer_patient AFTER UPDATE ON patient FOR EACH ROW \
 #  if new.state = "discharge" or new.state = "dead" then \
 #  BEGIN \
@@ -107,9 +108,9 @@ spring.datasource.createPatient=CREATE TABLE IF NOT EXISTS patient\
    index (w_nurse_id),\
    index (bed_id),\
    index (state)) ENGINE=InnoDB DEFAULT CHARSET=utf8;
-spring.datasource.insertPatient=INSERT IGNORE INTO patient (id,name,age,phone,address,rating,e_nurse_id,w_nurse_id,bed_id,state,is_to_be_released,is_to_be_transferred) VALUES\
-  (1,'bb','30','12345678901','fudan','mild',22,13,1,'hospitalized',0,0),\
-  (2,'cc','30','12345678902','fudan','mild',23,13,2,'hospitalized',0,0);
+#spring.datasource.insertPatient=INSERT IGNORE INTO patient (id,name,age,phone,address,rating,e_nurse_id,w_nurse_id,bed_id,state,is_to_be_released,is_to_be_transferred) VALUES\
+#  (1,'bb','30','12345678901','fudan','mild',22,13,1,'hospitalized',0,0),\
+#  (2,'cc','30','12345678902','fudan','mild',23,13,2,'hospitalized',0,0);
 spring.datasource.createDaily_report=CREATE TABLE IF NOT EXISTS daily_report\
   (id int NOT NULL AUTO_INCREMENT,\
    p_id int,\
@@ -157,10 +158,12 @@ spring.datasource.createWard=CREATE TABLE IF NOT EXISTS ward\
    primary key (id),\
    foreign key (t_area_id) references treatment_area(id),\
    index (t_area_id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+#spring.datasource.insertWard=INSERT IGNORE INTO ward (id,t_area_id) VALUES\
+#  (1,1),(2,1),(3,1),(4,1),(5,1),\
+#  (6,2),(7,2),(8,2),(9,2),(10,2),\
+#  (11,3),(12,3),(13,3),(14,3),(15,3);
 spring.datasource.insertWard=INSERT IGNORE INTO ward (id,t_area_id) VALUES\
-  (1,1),(2,1),(3,1),(4,1),(5,1),\
-  (6,2),(7,2),(8,2),(9,2),(10,2),\
-  (11,3),(12,3),(13,3),(14,3),(15,3);
+  (1,1),(2,3);
 spring.datasource.createWard_nurse_ward=CREATE TABLE IF NOT EXISTS ward_nurse_ward\
   (w_nurse_id int NOT NULL,\
    w_id int,\
@@ -169,8 +172,10 @@ spring.datasource.createWard_nurse_ward=CREATE TABLE IF NOT EXISTS ward_nurse_wa
    foreign key (w_id) references ward(id),\
    index (w_nurse_id),\
    index (w_id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+#spring.datasource.insertWard_nurse_ward=INSERT IGNORE INTO ward_nurse_ward (w_nurse_id,w_id) VALUES\
+#  (13,1),(14,1),(15,2),(16,3),(17,4),(18,6),(19,7),(20,8),(21,11),(28,12),(49,13);
 spring.datasource.insertWard_nurse_ward=INSERT IGNORE INTO ward_nurse_ward (w_nurse_id,w_id) VALUES\
-  (13,1),(14,1),(15,2),(16,3),(17,4),(18,6),(19,7),(20,8),(21,11),(28,12),(49,13);
+  (13,1),(14,2);
 spring.datasource.createBed=CREATE TABLE IF NOT EXISTS bed\
   (id int NOT NULL AUTO_INCREMENT,\
    w_id int,\
@@ -179,16 +184,18 @@ spring.datasource.createBed=CREATE TABLE IF NOT EXISTS bed\
    foreign key (w_id) references ward(id),\
    index (w_id),\
    index (state))ENGINE=InnoDB DEFAULT CHARSET=utf8;
+#spring.datasource.insertBed=INSERT IGNORE INTO bed (id,w_id,state) VALUES\
+#  (1,1,'occupied'),(2,1,'occupied'),(3,1,'free'),(4,1,'free'),\
+#  (5,2,'free'),(6,2,'free'),(7,2,'free'),(8,2,'free'),\
+#  (9,3,'free'),(10,3,'free'),(11,3,'free'),(12,3,'free'),\
+#  (13,4,'free'),(14,4,'free'),(15,4,'free'),(16,4,'free'),\
+#  (17,5,'free'),(18,5,'free'),(19,5,'free'),(20,5,'free'),\
+#  (21,6,'free'),(22,6,'free'),\
+#  (23,7,'free'),(24,7,'free'),\
+#  (25,8,'free'),(26,8,'free'),\
+#  (27,9,'free'),(28,9,'free'),\
+#  (29,10,'free'),(30,10,'free'),\
+#  (31,11,'free'),(32,12,'free'),(33,13,'free'),(34,14,'free'),(35,15,'free');
 spring.datasource.insertBed=INSERT IGNORE INTO bed (id,w_id,state) VALUES\
-  (1,1,'occupied'),(2,1,'occupied'),(3,1,'free'),(4,1,'free'),\
-  (5,2,'free'),(6,2,'free'),(7,2,'free'),(8,2,'free'),\
-  (9,3,'free'),(10,3,'free'),(11,3,'free'),(12,3,'free'),\
-  (13,4,'free'),(14,4,'free'),(15,4,'free'),(16,4,'free'),\
-  (17,5,'free'),(18,5,'free'),(19,5,'free'),(20,5,'free'),\
-  (21,6,'free'),(22,6,'free'),\
-  (23,7,'free'),(24,7,'free'),\
-  (25,8,'free'),(26,8,'free'),\
-  (27,9,'free'),(28,9,'free'),\
-  (29,10,'free'),(30,10,'free'),\
-  (31,11,'free'),(32,12,'free'),(33,13,'free'),(34,14,'free'),(35,15,'free');
+  (1,1,'free'),(2,1,'free'),(3,1,'free'),(4,2,'free');
 server.port=8080
