--- a/hims-backend/src/main/resources/application.properties
+++ b/hims-backend/src/main/resources/application.properties
@@ -69,6 +69,7 @@ spring.datasource.insertUser=INSERT IGNORE INTO user (id,name,password,age,email
   (50,'Mao M','123456','35','wnurse32@163.com','18292285618','w_nurse');
 spring.datasource.dropTrigger_on_patient=DROP TRIGGER IF EXISTS transfer_patient;
 spring.datasource.drop_transfer_patient_after_add_new_wnurse=DROP TRIGGER IF EXISTS transfer_patient_after_add_new_wnurse;
+spring.datasource.dropTrigger_on_bed=DROP TRIGGER IF EXISTS occupy_bed;
 #spring.datasource.createTrigger_on_patient=CREATE TRIGGER transfer_patient AFTER UPDATE ON patient FOR EACH ROW \
 #  if new.state = "discharge" or new.state = "dead" then \
 #  BEGIN \
@@ -86,6 +87,28 @@ spring.datasource.drop_transfer_patient_after_add_new_wnurse=DROP TRIGGER IF EXI
 #  END if; \
 #  END;
 #spring.datasource.createTrigger_on_patient=CREATE TRIGGER transfer_patient AFTER UPDATE ON patient FOR EACH ROW if new.state = "discharge" or new.state = "dead" then BEGIN declare p_id int; update bed set state = "free" where id = new.bed_id; select IFNULL(min(id),-1) into p_id from patient where rating = new.rating and is_to_be_transferred = 1 and bed_id is null; if p_id != -1 then update patient set w_nurse_id = new.w_nurse_id,bed_id = new.bed_id,state = "hospitalized",is_to_be_transferred = 0 where id = p_id; update bed set state = "occupied" where id = new.bed_id; else select IFNULL(min(id),-1) into p_id from patient where rating = new.rating and is_to_be_transferred = 1 and bed_id is not null; if p_id != -1 then update patient set w_nurse_id = new.w_nurse_id,bed_id = new.bed_id,is_to_be_transferred = 0 where id = p_id; update bed set state = "occupied" where id = new.bed_id; END if; END;
+#spring.datasource.createPatient=CREATE TABLE IF NOT EXISTS patient\
+#  (id int NOT NULL AUTO_INCREMENT,\
+#   name varchar(20),\
+#   age varchar(20),\
+#   phone varchar(20),\
+#   address varchar(50),\
+#   rating varchar(20),\
+#   e_nurse_id int DEFAULT 0,\
+#   w_nurse_id int DEFAULT 0,\
+#   bed_id int DEFAULT 0,\
+#   state varchar(20) DEFAULT '',\
+#   is_to_be_released boolean DEFAULT 0,\
+#   is_to_be_transferred boolean DEFAULT 0,\
+#   primary key (id),\
+#   foreign key (e_nurse_id) references user(id),\
+#   foreign key (w_nurse_id) references user(id),\
+#   foreign key (bed_id) references bed(id),\
+#   unique index (id),\
+#   index (e_nurse_id),\
+#   index (w_nurse_id),\
+#   index (bed_id),\
+#   index (state)) ENGINE=InnoDB DEFAULT CHARSET=utf8;
 spring.datasource.createPatient=CREATE TABLE IF NOT EXISTS patient\
   (id int NOT NULL AUTO_INCREMENT,\
    name varchar(20),\
@@ -93,16 +116,13 @@ spring.datasource.createPatient=CREATE TABLE IF NOT EXISTS patient\
    phone varchar(20),\
    address varchar(50),\
    rating varchar(20),\
-   e_nurse_id int,\
-   w_nurse_id int,\
-   bed_id int,\
-   state varchar(20),\
-   is_to_be_released boolean,\
-   is_to_be_transferred boolean,\
+   e_nurse_id int DEFAULT 0,\
+   w_nurse_id int DEFAULT 0,\
+   bed_id int DEFAULT 0,\
+   state varchar(20) DEFAULT '',\
+   is_to_be_released boolean DEFAULT 0,\
+   is_to_be_transferred boolean DEFAULT 0,\
    primary key (id),\
-   foreign key (e_nurse_id) references user(id),\
-   foreign key (w_nurse_id) references user(id),\
-   foreign key (bed_id) references bed(id),\
    unique index (id),\
    index (e_nurse_id),\
    index (w_nurse_id),\
@@ -154,7 +174,7 @@ spring.datasource.insertTreatment_area=INSERT IGNORE INTO treatment_area (id,typ
   (3,'critical',3,9);
 spring.datasource.createWard=CREATE TABLE IF NOT EXISTS ward\
   (id int NOT NULL AUTO_INCREMENT,\
-   t_area_id int,\
+   t_area_id int DEFAULT 0,\
    primary key (id),\
    foreign key (t_area_id) references treatment_area(id),\
    index (t_area_id))ENGINE=InnoDB DEFAULT CHARSET=utf8;
@@ -178,7 +198,7 @@ spring.datasource.insertWard_nurse_ward=INSERT IGNORE INTO ward_nurse_ward (w_nu
   (13,1),(14,2);
 spring.datasource.createBed=CREATE TABLE IF NOT EXISTS bed\
   (id int NOT NULL AUTO_INCREMENT,\
-   w_id int,\
+   w_id int DEFAULT 0,\
    state varchar(20),\
    primary key (id),\
    foreign key (w_id) references ward(id),\
@@ -197,5 +217,5 @@ spring.datasource.createBed=CREATE TABLE IF NOT EXISTS bed\
 #  (29,10,'free'),(30,10,'free'),\
 #  (31,11,'free'),(32,12,'free'),(33,13,'free'),(34,14,'free'),(35,15,'free');
 spring.datasource.insertBed=INSERT IGNORE INTO bed (id,w_id,state) VALUES\
-  (1,1,'free'),(2,1,'free'),(3,1,'free'),(4,2,'free');
+  (1,1,'free'),(2,1,'free'),(3,1,'free'),(4,1,'free');
 server.port=8080
