--- a/hims-backend/src/main/resources/application.properties
+++ b/hims-backend/src/main/resources/application.properties
@@ -135,7 +135,7 @@ spring.datasource.createDaily_report=CREATE TABLE IF NOT EXISTS daily_report\
   (id int NOT NULL AUTO_INCREMENT,\
    p_id int,\
    date DATE,\
-   temperature varchar(20),\
+   temperature float,\
    symptom varchar(50),\
    state varchar(20),\
    w_nurse_id int,\
