--- a/hims-backend/src/main/resources/application.properties
+++ b/hims-backend/src/main/resources/application.properties
@@ -179,7 +179,9 @@ spring.datasource.createWard=CREATE TABLE IF NOT EXISTS ward\
 #  (6,2),(7,2),(8,2),(9,2),(10,2),\
 #  (11,3),(12,3),(13,3),(14,3),(15,3);
 spring.datasource.insertWard=INSERT IGNORE INTO ward (id,t_area_id) VALUES\
-  (1,1),(2,3);
+  (1,1),(2,2),(3,3);
+#spring.datasource.insertWard=INSERT IGNORE INTO ward (id,t_area_id) VALUES\
+#  (1,1),(2,3);
 spring.datasource.createWard_nurse_ward=CREATE TABLE IF NOT EXISTS ward_nurse_ward\
   (w_nurse_id int NOT NULL,\
    w_id int,\
@@ -191,7 +193,7 @@ spring.datasource.createWard_nurse_ward=CREATE TABLE IF NOT EXISTS ward_nurse_wa
 #spring.datasource.insertWard_nurse_ward=INSERT IGNORE INTO ward_nurse_ward (w_nurse_id,w_id) VALUES\
 #  (13,1),(14,1),(15,2),(16,3),(17,4),(18,6),(19,7),(20,8),(21,11),(28,12),(49,13);
 spring.datasource.insertWard_nurse_ward=INSERT IGNORE INTO ward_nurse_ward (w_nurse_id,w_id) VALUES\
-  (13,1),(14,2);
+  (13,1),(14,2),(15,3);
 spring.datasource.createBed=CREATE TABLE IF NOT EXISTS bed\
   (id int NOT NULL AUTO_INCREMENT,\
    w_id int DEFAULT 0,\
@@ -213,5 +215,5 @@ spring.datasource.createBed=CREATE TABLE IF NOT EXISTS bed\
 #  (29,10,'free'),(30,10,'free'),\
 #  (31,11,'free'),(32,12,'free'),(33,13,'free'),(34,14,'free'),(35,15,'free');
 spring.datasource.insertBed=INSERT IGNORE INTO bed (id,w_id,state) VALUES\
-  (1,1,'free'),(2,1,'free'),(3,1,'free'),(4,1,'free');
+  (1,1,'free'),(2,1,'free'),(3,1,'free'),(4,1,'free'),(5,2,'free'),(6,2,'free'),(7,2,'free'),(8,3,'free');
 server.port=8080
